--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-prom-bundle": "^8.0.0",
     "jspdf": "^3.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.1",
+    "prom-client": "^15.1.3",
     "puppeteer": "^24.10.2",
     "winston": "^3.11.0"
   },
